# temp_123

./: CMakeLists.txt  main.cpp
modules/: CMakeLists.txt
modules/include/: calc.hpp
modules/src/: calc.cpp
samples/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test.cpp
